hphp/test/zend/good/ext/gd/tests/png2wbmp_error1.php.skipif
<?php
if (!gd_info()['PNG Support']) echo 'skip';
if (!gd_info()['WBMP Support']) echo 'skip';
