hphp/test/zend/bad/tests/basic/012.php.skipif
<?php if(php_sapi_name()!='cli') echo 'skip'; ?>